﻿                CHANGES IN TraMineRextras VERSION 0.3.4 [2015-01-27]


                CHANGES IN TraMineRextras VERSION 0.2.3 [2015-01-27]

New function

    o   seqtabstocc(): frequencies of state co-occurrence patterns

Changes in existing functions

    o   seqgranularity(): new method "mostfreq"

    o   seqedplot(): replaced calls of TraMineR internal functions seqeage
        and TraMineR.legend with respectively
        TraMineRInternalSeqeage and TraMineRInternalLegend
        (should be transparent to the end user).


                CHANGES IN TraMineRextras VERSION 0.2.2 [2013-10-30]

    o   Fixed issue with calling Rinternals from within extern "C" {}
        in seqstart.cpp (request of B. Ripley)


                CHANGES IN TraMineRextras VERSION 0.2.1 [2013-03-15]

General

    o   NEWS now uses basic formatting rules and is saved as inst/NEWS

Bug Fixes

    o   FCE_to_TSE(): Events were not properly chronologically sorted.

    o   TSE_to_STS(): produced inconsistent results when events were
        not chronologically sorted by cases.


                CHANGES IN TraMineRextras VERSION 0.2 [2012-12-06]

General:

    o   First release on CRAN

Changes in existing functions:

    o   seqplot.tentrop() and seqplot.tentrop.m(): new argument 'cex.legend'
        for controlling legend scaling factor.

    o   seqentrans(): new option 'avg.occ'; when set as TRUE the table is
        completed with average number of occurrences of the subsequences
        in each sequence. The latter differs from the support for
        counting methods other than COBJ. Requires TraMineR 1.8-5 or higher.

    o   dissvar.grp() and seqrep.grp() now also accept distance object as
        'mdis' argument.

    o   group.p has now a 'weights' argument.

Bug Fixes

    o   seqedist(): fixed a mix between norm and interval arguments.

    o   fixed build warning generated by calls of foreign functions.
