@@ -1,6 +1,6 @@
 Package: TraMineRextras
 Version: 0.3.4
-Date: 2015-01-27
+Date: 2015-07-09
 Title: TraMineR Extension
 Authors@R: c(
   person("Gilbert", "Ritschard", role = c("aut", "cre", "ths", "cph"),
@@ -14,7 +14,7 @@ Depends: R (>= 2.8.1), TraMineR (>= 1.8-9), RColorBrewer, survival, cluster
 Imports: combinat
 Description: Collection of ancillary functions and utilities to be used in conjunction with the TraMineR package for sequence data exploration. Most of the functions are in test phase, lack systematic consistency check of the arguments and are subject to changes. Once fully checked, some of the functions of this collection could be included in a next release of TraMineR.
 License: GPL (>= 2)
-URL: http://mephisto.unige.ch/traminer
+URL: http://traminer.unige.ch/
 Encoding: UTF-8
 Author: Gilbert Ritschard [aut, cre, ths, cph],
   Matthias Studer [aut],
